src/ui/snapshots/siggy__ui__snapshot_tests__action_menu_overlay.snap
---
source: src/ui.rs
expression: output
---
 Chats               │╭ Alice ─────────────────────────────────────────────────────────────────────╮
  ? +15550007777 (1) ││[08:00] <Alice> Good morning! How's your day going?                         │
  • ##Family (2)     ││    👍  1                                                                    │
  • Carol (1)        ││● [08:05] <you> Just getting started, coffee in hand                        │
    ##Rust Devs      ││    ❤️  1                                                                    │
    Bob              ││[08:10] <Alice> Nice! I've been up since 6, went for a run                  │
▸   Alice            ││● [08:15] <you> Impressive. I can barely get out of bed before 7            │
    Dave             ││[08:20] <Alice> Ha! It gets easier once you build the habit                 │
                     ││● [08:25] <you> That's what everyone says...                                │
                     ││[08:30] <Alice> Trust me, after a week it becomes automatic                 │
                     ││  ╭ <you> Ju╭ Actions ───────────────────╮hand                              │
                     ││[08:35] <Ali│  Reply                  q  │offee first too                   │
                     ││✓ [08:40] <y│  React                  r  │                                  │
                     ││[08:42] <Ali│  Forward                f  │ mind?                            │
                     ││[08:45] <Ali│  Copy                   y  │t: https://localmarket.example.com│
                     ││  ├ Downtown│  Delete                 d  │                                  │
                     ││  ├ Fresh pr│  Pin                    p  │ music every Saturday…            │
                     ││  ╰ https://│                            │                                  │
                     ││○ [08:47] <y│  Esc to close              │we go?                            │
                     ││✓ [08:48] <A╰────────────────────────────╯e. Less crowded.                  │
                     ││○ [08:50] <you> Perfect, let's do 9                                         │
                     ││○ [08:52] <Alice> I'll pick you up at 8:45                                  │
                     ││○ [08:55] <you> (edited) Actually make it 8:30, I want to browse early      │
                     ││[08:57] <Alice> Even better! See you Saturday                               │
                     ││    🎉  1                                                                    │
                     │╰────────────────────────────────────────────────────────────────────────────╯
                     │╭────────────────────────────────────────────────────────────────────────────╮
                     ││  Type a message...                                                         │
                     │╰────────────────────────────────────────────────────────────────────────────╯
 [INSERT] │  ● connected │ Alice │ 7 chats
