src/ui/snapshots/siggy__ui__snapshot_tests__emoji_picker_overlay.snap
---
source: src/ui/mod.rs
expression: output
---
 Chats               │╭ Alice ─────────────────────────────────────────────────────────────────────╮
  ? +15550007777 (1) ││[08:00] <Alice> Good morning! How's your day going?                         │
  • ##Family (2)     ││    👍  1                                                                    │
  • Carol (1)        ││● [08:05] <you> Just getting started, coffee in hand                        │
    ##Rust Devs      ││    ❤️  1                                                                    │
    Bob              ││[╭ Emoji ───────────────────────────────────────────╮a run                  │
▸   Alice            ││●│ *  😀   👋   🐻   🍔   ✈️   ⚽   💡   ❤️   🏁             │ed before 7            │
    Dave             ││[│──────────────────────────────────────────────────│ habit                 │
                     ││●│ 😀  😃  😄  😁  😆  😅  🤣  😂  🙂  🙃  🫠  😉  😊  😇  🥰  😍   │                       │
                     ││[│ 🤩  😘  😗  ☺️  😚  😙  🥲  😋  😛  😜  🤪  😝  🤑  🤗  🤭  🫢   │omatic                 │
                     ││ │ 🫣  🤫  🤔  🫡  🤐  🤨  😐  😑  😶  🫥  😶‍🌫️  😏  😒  🙄  😬  😮‍💨   │                       │
                     ││[│ 🤥  🫨  🙂‍↔️  🙂‍↕️  😌  😔  😪  🤤  😴  🫩 😷  🤒  🤕  🤢  🤮  🤧    │ too                   │
                     ││✓│ 🥵  🥶  🥴  😵  😵‍💫  🤯  🤠  🥳  🥸  😎  🤓  🧐  😕  🫤  😟  🙁   │                       │
                     ││[│ ☹️  😮  😯  😲  😳  🫪 🥺  🥹  😦  😧  😨  😰  😥  😢  😭  😱    │                       │
                     ││[│ 😖  😣  😞  😓  😩  😫  🥱  😤  😡  😠  🤬  😈  👿  💀  ☠️  💩   │localmarket.example.com│
                     ││ │ 🤡  👹  👺  👻  👽  👾  🤖  😺  😸  😹  😻  😼  😽  🙀  😿  😾   │                       │
                     ││ │ 🙈  🙉  🙊  💌  💘  💝  💖  💗  💓  💞  💕  💟  ❣️  💔  ❤️‍🔥  ❤️‍🩹   │y Saturday…            │
                     ││ │ ❤️  🩷  🧡  💛  💚  💙  🩵  💜  🤎  🖤  🩶  🤍  💋  💯  💢  🫯   │                       │
                     ││○│ 💥  💫  💦  💨  🕳️  💬  👁️‍🗨️  🗨️  🗯️  💭  💤  🦾  🦿  🧠  🫀  🫁   │                       │
                     ││✓│ 🦷  🦴  👀  👁️  👅  👄  🫦  🧞  🧞‍♂️  🧞‍♀️  🧟  🧟‍♂️  🧟‍♀️  🧌  🫈 🤺    │wded.                  │
                     ││○│ ⛷️  👨‍👩‍👦  👨‍👩‍👧  👨‍👩‍👧‍👦  👨‍👩‍👦‍👦  👨‍👩‍👧‍👧  👨‍👨‍👦  👨‍👨‍👧  👨‍👨‍👧‍👦  👨‍👨‍👦‍👦  👨‍👨‍👧‍👧  👩‍👩‍👦  👩‍👩‍👧  👩‍👩‍👧‍👦  👩‍👩‍👦‍👦  👩‍👩‍👧‍👧   │                       │
                     ││○│😀  :grinning: - grinning face                     │                       │
                     ││○│ Tab: category | arrows: nav | type to filter | Es│t to browse early      │
                     ││[│                                                  │                       │
                     ││ ╰──────────────────────────────────────────────────╯                       │
                     │╰────────────────────────────────────────────────────────────────────────────╯
                     │╭────────────────────────────────────────────────────────────────────────────╮
                     ││  Type a message...                                                         │
                     │╰────────────────────────────────────────────────────────────────────────────╯
 [INSERT] │  ● connected │ Alice │ 7 chats
