src/ui/snapshots/siggy__ui__snapshot_tests__empty_conversation.snap
---
source: src/ui.rs
expression: output
---
 Chats               │╭ Empty ─────────────────────────────────────────────────────────────────────╮
  ? +15550007777 (1) ││                                                                            │
  • ##Family (2)     ││                                                                            │
  • Carol (1)        ││                                                                            │
    ##Rust Devs      ││                                                                            │
    Bob              ││                                                                            │
    Alice            ││                                                                            │
    Dave             ││                                                                            │
▸   Empty            ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     │╰────────────────────────────────────────────────────────────────────────────╯
                     │╭────────────────────────────────────────────────────────────────────────────╮
                     ││  Type a message...                                                         │
                     │╰────────────────────────────────────────────────────────────────────────────╯
 [INSERT] │  ● connected │ Empty │ 8 chats
