src/ui/snapshots/siggy__ui__snapshot_tests__help_overlay.snap
---
source: src/ui/mod.rs
expression: output
---
 Chats               │╭ Alice ─────────────────────────────────────────────────────────────────────╮
  ? +15550007777 (1) ││╭ Help ──────────────────────────────────────────────╮                      │
  • ##Family (2)     │││  Commands                                          │                      │
  • Carol (1)        │││  /join <name>        Switch to a conversation (@han│                      │
    ##Rust Devs      │││  /part               Leave current conversation    │                      │
    Bob              │││  /delete             Delete current conversation   │ run                  │
▸   Alice            │││  /attach             Attach a file                 │d before 7            │
    Dave             │││  /search <query>     Search messages               │habit                 │
                     │││  /sidebar            Toggle sidebar visibility     │                      │
                     │││  /bell [type]        Toggle notifications          │matic                 │
                     │││  /mute               Mute/unmute conversation      │                      │
                     │││  /contacts           Browse contacts               │too                   │
                     │││  /settings           Open settings                 │                      │
                     │││  /keybindings        Configure keybindings         │                      │
                     │││  /lock               Lock the session              │ocalmarket.example.com│
                     │││  /lock-reset         Change the lock passphrase    │                      │
                     │││  /quit               Exit siggy                    │ Saturday…            │
                     │││                                                    │                      │
                     │││  Shortcuts                                         │                      │
                     │││  Ctrl+p              Command palette               │ded.                  │
                     │││  Tab / Shift+Tab     Next / prev conversation      │                      │
                     │││  Up / Down           Recall input history          │                      │
                     │││  @                   Mention autocomplete          │ to browse early      │
                     │││  PgUp / PgDn         Scroll messages               │                      │
                     │││  Ctrl+Left / Ctrl+RightResize sidebar              │                      │
                     │╰│  Ctrl+l              Lock the session              │──────────────────────╯
                     │╭│  F12                 Scramble the display          │──────────────────────╮
                     │││  Ctrl+c              Quit                          │                      │
                     │╰╰────────────────────────────────────────────────────╯──────────────────────╯
 [INSERT] │  ● connected │ Alice │ 7 chats
